# filebrowser-tauri

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  .prettierrc.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initialize.sql  initialiize.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  favorites.rs  files.rs  mod.rs  os.rs  thumbnail.rs  transcode.rs
src-tauri/src/models/: api_response.rs  error.rs  favorite.rs  file_info.rs  files.rs  mod.rs  response.rs  transcode.rs
src-tauri/src/repos/: favorites_repo.rs  files_repo.rs  mod.rs  thumbnails_repo.rs  transcode_repo.rs
src-tauri/src/repos/offline/: mod.rs  offline_favorites_repo.rs  offline_files_repo.rs  offline_thumbnails_repo.rs  offline_transcode_repo.rs
src-tauri/src/repos/online/: mod.rs  online_favorites_repo.rs  online_files_repo.rs  online_thumbnails_repo.rs  online_transcode_repo.rs
src-tauri/src/services/: api_service.rs  file_service.rs
src-tauri/src/utils/: lru_cache.rs  macros.rs  mod.rs  path_validator.rs
src/api/: favoriteService.ts  fileService.ts  transcodeService.ts
src/components/: AppConfigForm.tsx  AppInitModal.tsx
src/constants/: routes.ts  toast.ts
src/hooks/: useAppInitialization.ts  useHevcDetect.ts
src/layouts/: AppLayout.tsx
src/pages/: BrowsePage.tsx  FavoritePage.tsx  SettingsPage.tsx
src/services/: configService.ts
src/stores/: browseStore.ts  configStore.ts  favoriteStore.ts  toastStore.ts  transcodeStore.ts
(+41 files in other folders)
