[package]
name = "filebrowser-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[lib]
name = "filebrowser_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls-tls",
] }
dirs = "5"
tokio = { version = "1", features = ["full"] }
lazy_static = "1"
tauri-plugin-store = "2"
sqlx = { version = "0.8", features = [
  "sqlite",
  "runtime-tokio-rustls",
  "chrono",
  "migrate",
] }
image = "0.25"
rand = "0.9"
pathdiff = "0.2"
uuid = "1"
